--- a/packages/dbus-proxy/dbus-proxy/CMakeLists.txt
+++ b/packages/dbus-proxy/dbus-proxy/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Copyright 2025 TII (SSRC) and the Ghaf contributors
+# SPDX-License-Identifier: Apache-2.0
+
 cmake_minimum_required(VERSION 3.10)
 project(dbus-proxy CXX)
 
